あたらしくなったんだよ

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <div class="container">
         <div id="tytle">
-            <h1 id="main-tytle">ホームページつくってるんだよ</h1>
-            <h2 id="sub-tytle">タイトルどうしようかな</h2>
+            <h1 id="main-tytle">なっちょ、勉強中</h1>
+            <h2 id="sub-tytle">接客をするアマビエ</h2>
         </div>
     </div>
 
