--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
     <link rel="stylesheet" href="css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 </head>
-<body>
-    <div class="container">
-        <div id="tytle">
-            <h1 id="main-tytle">なっちょ、勉強中</h1>
-            <h2 id="sub-tytle">接客をするアマビエ</h2>
+<header>
+    <div class="header-container">
+        <div class="header-tytle">
+            <h1 class="main-tytle">タイトルなんだよね</h1>
         </div>
     </div>
+</header>
+<body>
+    
 
     <script src="js/nattyo.js"></script>
 </body>
