アマビエ先生追加

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <header>
     <div class="header-container">
+        <a href="http://r-study.netlify.app"><img src="data/amabie_sekkyaku.png"></a>
         <div class="header-tytle">
             <h1 class="main-tytle">タイトルなんだよね</h1>
         </div>
