--- a/index.html
+++ b/index.html
@@ -6,16 +6,12 @@
     <link rel="stylesheet" href="css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 </head>
-<header>
+
+<body>
     <div class="header-container">
         <a href="http://r-study.netlify.app"><img src="data/amabie_sekkyaku.png"></a>
-        <div class="header-tytle">
-            <h1 class="main-tytle">タイトルなんだよね</h1>
-        </div>
+        <div class="header-title">タイトルなんだよね</div>
     </div>
-</header>
-<body>
-    
 
     <script src="js/nattyo.js"></script>
 </body>
