なちょめにゅー！

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
         <div class="header-title">タイトルなんだよね</div>
     </div>
 
+    <div class="left-menu">
+        <a href="http://r-study.netlify.app"><div class="menu-title">なちょめにゅー</div></a>
+        <div class="menu-title">なちょめにゅー</div>
+    </div>
     <script src="js/nattyo.js"></script>
 </body>
 
