ださいぼっとん

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <div class="left-menu">
         <a href="http://r-study.netlify.app"><div class="menu-title">なちょめにゅー</div></a>
-        <div class="menu-title">なちょめにゅー</div>
+        <button class="menu-btn" type="button" onclick="location.href='http://r-study.netlify.app'"><div class="menu-title">なちょめにゅー</div></button>
     </div>
     <script src="js/nattyo.js"></script>
 </body>
