なちょめにゅーのズレをなくしたんだよ

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </div>
 
     <div class="left-menu">
-        <a href="http://r-study.netlify.app"><div class="menu-title">なちょめにゅー</div></a>
+        <button class="menu-btn" type="button" onclick="location.href='http://r-study.netlify.app'"><div class="menu-title">なちょめにゅー</div></button>
         <button class="menu-btn" type="button" onclick="location.href='http://r-study.netlify.app'"><div class="menu-title">なちょめにゅー</div></button>
     </div>
     <script src="js/nattyo.js"></script>
