タイトルかえちゃっちょ

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="header-container">
         <a href="http://r-study.netlify.app"><img src="data/amabie_sekkyaku.png"></a>
-        <div class="header-title">タイトルなんだよね</div>
+        <div class="header-title">なっちょいほむぺ</div>
     </div>
 
     <div class="left-menu">
