めいんめっせーじ

--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
         <button class="menu-btn" type="button" onclick="location.href='http://r-study.netlify.app'"><div class="menu-title">なちょめにゅー</div></button>
     </div>
     <script src="js/nattyo.js"></script>
+
+    <div class="main-container">
+        <div class="main-message">
+            なっちょい！<br>
+            なっちょいの、はじめてのほむぺです<br>
+            焼肉おいしかったね<br>
+            くま
+        </div>
+    </div>
 </body>
 
 </html>
