アマビエ先生のリンク不具合なおしたよ。あとメインの文章かえた

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
 <body>
     <div class="header-container">
-        <a href="http://r-study.netlify.app"><img src="data/amabie_sekkyaku.png"></a>
         <div class="header-title">なっちょいほむぺ</div>
+        <a href="http://r-study.netlify.app"><img src="data/amabie_sekkyaku.png"></a>
     </div>
 
     <div class="left-menu">
@@ -21,12 +21,12 @@
 
     <div class="main-container">
         <div class="main-message">
-            なっちょい！<br>
-            なっちょいの、はじめてのほむぺです<br>
-            焼肉おいしかったね<br>
-            くま
-            <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-            なっちょ
+            なっちょい先生作成ほむぺ<br><br>
+            メニュー説明<br>
+            なちょcontent：なっちょいの制作物紹介<br>
+            なちょdescription：なっちょいの制作環境と工程紹介<br>
+            なちょprofile：制作者なっちょいの紹介<br>
+        
         </div>
     </div>
 </body>
