こんどこそprofile

--- a/index.html
+++ b/index.html
@@ -9,15 +9,14 @@
 
 <body>
     <div class="header-container">
-        <a href="http://r-study.netlify.app"><img src="data/amabie_sekkyaku.png"></a>
         <div class="header-title">なっちょいほむぺ</div>
+        <a href="http://r-study.netlify.app"><img src="data/amabie_sekkyaku.png"></a>
     </div>
 
     <div class="left-menu">
         <button class="menu-btn" type="button" onclick="location.href='http://r-study.netlify.app'"><div class="menu-title">なちょめにゅー</div></button>
-        <button class="menu-btn" type="button" onclick="location.href='http://r-study.netlify.app'"><div class="menu-title">なちょめにゅー</div></button>
+        <button class="menu-btn" type="button" onclick="location.href='http://r-study.netlify.app/profile'"><div class="menu-title">なちょprofile</div></button>
     </div>
-    <script src="js/nattyo.js"></script>
 
     <div class="main-container">
         <div class="main-message">
@@ -26,9 +25,10 @@
             なちょcontent：なっちょいの制作物紹介<br>
             なちょdescription：なっちょいの制作環境と工程紹介<br>
             なちょprofile：制作者なっちょいの紹介<br>
-        
         </div>
     </div>
+
+    <script src="js/nattyo.js"></script>
 </body>
 
 </html>
