あたらしいページつくった！

--- a/content.html
+++ b/content.html
@@ -22,12 +22,12 @@
 
     <div class="main-container">
         <div class="main-message">
-            なっちょい先生作成ほむぺ<br><br>
-            メニュー説明<br>
-            なちょprofile：制作者なっちょいの紹介<br>
-            なちょcontent：なっちょいの制作物紹介<br>
-            なちょdescription：なっちょいの制作環境と工程紹介<br>
-            
+            なっちょいほむぺについて<br>
+            こっちょこつ。<br>
+            なっちょい先生の初めてのほむぺ。<br>
+            なかなか進まない。<br>
+            かっこいい感じのとか作ってみたい。<br>
+            今回はピンクと水色でかわいいなちょほむぺにした。けっこうえらい。<br>
         </div>
     </div>
 
