--- a/profile.html
+++ b/profile.html
@@ -1,1 +1,40 @@
-なっちょい先生
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <title>こっちょこつ</title>
+    <link rel="stylesheet" href="css/style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+</head>
+
+<body>
+    <div class="header-container">
+        <div class="header-title">なっちょいほむぺ</div>
+        <a href="http://r-study.netlify.app"><img src="data/amabie_sekkyaku.png"></a>
+    </div>
+
+    <div class="left-menu">
+        <button class="menu-btn" type="button" onclick="location.href='http://r-study.netlify.app'"><div class="menu-title">なちょめにゅー</div></button>
+        <button class="menu-btn" type="button" onclick="location.href='http://r-study.netlify.app/profile'"><div class="menu-title">なちょprofile</div></button>
+        <button class="menu-btn" type="button" onclick="location.href='http://r-study.netlify.app/content'"><div class="menu-title">なちょcontent</div></button>
+        <button class="menu-btn" type="button" onclick="location.href='http://r-study.netlify.app/description'"><div class="menu-title">なちょdescription</div></button>
+    </div>
+
+    <div class="main-container">
+        <div class="main-message">
+            なっちょい先生とは<br>
+            なっちょい先生。<br>
+            25歳。まだまだ若い。<br>
+            最近は美白にハマり中。<br>
+            がんばって白くなりたい。<br>
+            ちょっちょい大先生からいろんなことを教えてもらっている。<br>
+            代わりにちょっちょい大先生にはピアノを教えてあげている。えらい。<br>
+            ちょっちょい大先生と一緒にくまで遊ぶのが日課。<br>
+            くまとくちぱっちがだいすき。<br>
+        </div>
+    </div>
+
+    <script src="js/nattyo.js"></script>
+</body>
+
+</html>
