--- a/description.html
+++ b/description.html
@@ -22,12 +22,13 @@
 
     <div class="main-container">
         <div class="main-message">
-            なっちょい先生作成ほむぺ<br><br>
-            メニュー説明<br>
-            なちょprofile：制作者なっちょいの紹介<br>
-            なちょcontent：なっちょいの制作物紹介<br>
-            なちょdescription：なっちょいの制作環境と工程紹介<br>
-            
+            なっちょいの制作環境と工程紹介。<br>
+            Visual Studio Codeでがんばっているもよう。<br>
+            さいきんMacBook Airを買ったのでうれしそう。<br>
+            生まれてこのかたWindowsだったので、Macに慣れてなくてたいへん。<br>
+            コントロールの位置が違うのが一番たいへんらしい。<br>
+            会社はWindowsだから余計にたいへん。<br>
+            でもがんばっている。えらい。<br>
         </div>
     </div>
 
